<resources>
    <string name="welcome_text">Hello World!</string>
    <string name="app_name">Sample Espresso</string>
    <string name="title_activity_login">Login</string>
    <string name="login_message">Please log in to continue.</string>
    <string name="login_btn">Login</string>
    <string name="username_hint">name</string>
    <string name="password">password</string>
    <string name="title_activity_main">Espresso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_msg">Welcome %s!</string>
    <string name="action_settings">Settings</string>
    <string name="guest">Guest</string>
    <string name="guest_btn">Continue as Guest</string>
    <string name="login_failed_message">User valid username or password. If you are not a user continue as guest.</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_others">Others</string>
    <string name="web_url">http://www.example.com</string>
    <string name="switch_label">Switch.</string>
    <string name="radio_button_label">Radio Button</string>
    <string name="switch_status_text">Switch is %s.</string>
    <string name="radio_button_status_text">Radio button is %s.</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="edittext">edittext</string>
    <string name="nav_web_view_title">Web view</string>
    <string name="nav_others_title">Others</string>
</resources>
